manifests/tools/manifests/grafana/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    shared-gateway-access: 'true'
