manifests/tools/manifests/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  hostnames:
  - grafana.matoru.ru
  parentRefs:
  - kind: Gateway
    name: gateway
    namespace: istio-ingress
  rules:
  - backendRefs:
    - name: grafana
      port: 80
